--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 
-* Basic setup of scaffolding with bootstrap and backbone
+√ Basic setup of scaffolding with bootstrap and backbone
+
 * Users can login with twitter oauth
 * Create a worker that hits twitter for a given user and pulls back their recent feed
 * Parse the feed for links
