--- a/README.rdoc
+++ b/README.rdoc
@@ -7,8 +7,8 @@ Display the links from your twitter feed in a sexy way
   createdb tweetlinks_development
   createdb tweetlinks_test
   rake db:schema:load db:migrate
+  export TWEETLINKS_TWITTER_CONSUMER_KEY=a key
+  export TWEETLINKS_TWITTER_CONSUMER_SECRET=a secret
+  export TWEETLINKS_SESSION_secret=blahblahblah
   rspec spec
   rails s puma
-  export TWITTER_CONSUMER_KEY=a key
-  export TWITTER_CONSUMER_SECRET=a secret
-  export SESSION_TOKEN=blahblahblah
