--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,4 @@
-# Sample localization file for English. Add more files in this directory for other locales.
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  hello: "Hello world"
+  sign_up_with_twitter: "Sign up with Twitter"
+  site_title: "TweetLinks"
+  tagline: "Some of the people you follow on Twitter link to stuff. Some of that stuff is awesome. You're probably missing a bunch of those links, and I'm pretty sure you've never seen them in an awesome grid. If that's the case, TweetLinks is here to help."
