--- a/TODO.txt
+++ b/TODO.txt
@@ -5,9 +5,10 @@
 √ Users can login with twitter oauth
 √ Store access token and secret with the users
 √ Send the current user to the client
+√ Pull down tweets
 
-* Create a rake task that hits twitter for all of the users and pulls back their recent feed
-* Parse the feed for links
+* Find links in the tweets
+* Create a tweet for newly discovered links
 * Write a PhantomJS script that will take a URL and create an image from it
 * Write a function that given a link will execute the PhantomJS script
 * Upload phantomJS images to cloudinary.
