* switch to sidekiq * move the bulk of the rake work over to sidekiq worker * configure cloudinary * add a worker for capturing an image with phantomjs * upload images to cloudinary after capturing them

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,12 +10,15 @@
 √ Create a tweet for newly discovered links
 √ Add a rake task that can update tweets for each user
 √ Handle errors in the tweet puller
+√ Write a PhantomJS script that will take a URL and create an image from it
+√ Move to sidekiq
+√ Write a worker that given a link will execute the PhantomJS script
+√ Upload phantomJS images to cloudinary.
 
-* Write a PhantomJS script that will take a URL and create an image from it
-* Write a function that given a link will execute the PhantomJS script
-* Upload phantomJS images to cloudinary.
+* Store the cloudinary data in the tweets
+* Manage the size of the images, so they're not so huge
 * Store the list of images in the user's account, along with data about where it came from and the tweet content
 * Back on the client, create a masonry display that shows all of the images
 * Add data about the source of the link to the display
-* Make interactios where clicking will take you to the tweeter, tweet, site, etc.
+* Make interactions where clicking will take you to the tweeter, tweet, site, etc.
 * Add a modal dialog for seeing a bigger version of the image
