* Add an API endpoint for returning tweets * Store cloudinary data in the tweets * Block tweets after 50 with links in them

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,9 +15,10 @@
 √ Write a worker that given a link will execute the PhantomJS script
 √ Upload phantomJS images to cloudinary.
 √ Manage the size of the images, so they're not so huge
+√ Store the list of images in the user's account, along with data about where it came from and the tweet content
 
 * Store the cloudinary data in the tweets
-* Store the list of images in the user's account, along with data about where it came from and the tweet content
+* Create an API to serve up images to the client
 * Back on the client, create a masonry display that shows all of the images
 * Add data about the source of the link to the display
 * Make interactions where clicking will take you to the tweeter, tweet, site, etc.
