--- a/README.rdoc
+++ b/README.rdoc
@@ -4,6 +4,7 @@ Display the links from your twitter feed in a sexy way
 
 == Setup
 
+  brew install phantomjs
   createdb tweetlinks_development
   createdb tweetlinks_test
   rake db:schema:load db:migrate
