point at assets in the correct place

--- a/TODO.txt
+++ b/TODO.txt
@@ -18,8 +18,9 @@
 √ Store the list of images in the user's account, along with data about where it came from and the tweet content
 √ Store the cloudinary data in the tweets
 √ Create an API to serve up images to the client
+√ Back on the client, create a masonry display that shows all of the images
+√ Add data about the source of the link to the display
 
-* Back on the client, create a masonry display that shows all of the images
-* Add data about the source of the link to the display
+* Deploy it to heroku
 * Make interactions where clicking will take you to the tweeter, tweet, site, etc.
 * Add a modal dialog for seeing a bigger version of the image
