--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,3 @@
-
 √ Basic setup of scaffolding with bootstrap and backbone
 √ Create users
 √ Create a splash screen
@@ -20,7 +19,6 @@
 √ Create an API to serve up images to the client
 √ Back on the client, create a masonry display that shows all of the images
 √ Add data about the source of the link to the display
-
-* Deploy it to heroku
-* Make interactions where clicking will take you to the tweeter, tweet, site, etc.
-* Add a modal dialog for seeing a bigger version of the image
+√ Deploy it to heroku
+√ Make interactions where clicking will take you to the tweeter, tweet, site, etc.
+√ Add a modal dialog for seeing a bigger version of the image
